# rust-etl

./: .gitignore  LICENSE  README.md  top-rated-wines.csv
examples/1-extract/: Cargo.toml
examples/1-extract/src/: main.rs
examples/2-transform-dummies/: Cargo.toml
examples/2-transform-dummies/src/: main.rs
examples/3-load/: Cargo.toml
examples/3-transform-filter/src/: main.rs
examples/4-load/: Cargo.toml
examples/4-load/src/: main.rs
