[package]
name = "extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.38.3", features = ["lazy", "strings", "regex"] }
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }